2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
	If the duration of a block is unknown only use the timestamp for the
	first lace and use GST_CLOCK_TIME_NONE as duration for the following
	laces. Otherwise every lace has the same timestamp which leads to
	various problems. Really fixes bug #548831.

2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_chain):
	If we're not allowing width!=depth in wavenc we should also disable
	the code that was added to support width!=depth.

2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream):
	Don't calculate the default duration of a frame from the audio sampling
	rate. This only works for raw audio if every frame contains a single
	sample and results in broken buffer durations for other formats
	if no specified default duration is given or the blocks have no
	duration. Fixes bug #548831.

2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
	Allow zero sized blocks instead of returning GST_FLOW_OK. Such blocks
	are used for text/plain subtitles as a gap-filler in some files.

2008-08-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_structure),
	(gst_v4l2_get_caps_info):
	Add S910 and PWC formats with a low priority.

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_format_get_rank),
	(gst_v4l2src_probe_caps_for_format):
	Add more debugging.

2008-08-20  Tim-Philipp Müller  <tim at collabora co uk>

	* ext/flac/gstflacenc.c:
	  Fix compilation against older libflac versions.

2008-08-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/pulse/pulsemixer.c: (gst_pulsemixer_class_init),