@@ -1,5 +1,11 @@
 2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* gst/wavenc/gstwavenc.c: (gst_wavenc_chain):
+	Revert the last commit. wavenc still supports width!=depth for 32 bit
+	width. Thanks Tim.
+
+2008-08-21  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* gst/matroska/matroska-demux.c:
 	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
 	If the duration of a block is unknown only use the timestamp for the
